--- a/src/main/resources/templates/modificarCliente.html
+++ b/src/main/resources/templates/modificarCliente.html
@@ -13,7 +13,32 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <h2>Informacion del clientes</h2>
-        <a th:href="@{/cliente/nuevo}">Nuevo cliente</a>
+        <a th:href="@{/}">Regresar</a>
+        <hr/>
+        <form th:action="@{/cliente/guardar}"
+              method="post"
+              th:object="${cliente}">
+            
+            <fieldset><input type="hidden" name="idCliente" th:field="*{idCliente}"/>
+            <fieldset>
+                <label for="nombre">Nombre</label>
+                <input type="text" name="nombre" th:field="*{nombre}"/>
+            </fieldset>    
+            <fieldset>
+                <label for="apellidos">Apellido</label>
+                <input type="text" name="apellidos" th:field="*{apellidos}"/>
+            </fieldset>
+            <fieldset>
+                <label for="correo">Correo</label>
+                <input type="email" name="correo" th:field="*{correo}"/>
+            </fieldset>    
+            <fieldset>
+                <label for="telefono">Telefono</label>
+                <input type="tel" name="telefono" th:field="*{telefono}"/>
+            </fieldset>   
+            <hr/>
+            <input type="submit" value="Guardar" name="guardar"/>
+        </form>
         <div th:if="${clientes !=null and !clientes.empty}">
         <table border="1">
             <tr>
@@ -21,8 +46,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <th>Apellidos</th>
                 <th>Correo</th>
                 <th>Telefono</th>
-                <th>Eliminar</th>
-                <th>Modificar</th>
            </tr>
            
            <tr th:each="cliente : ${clientes}">
@@ -30,9 +53,6 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                <td>[[${cliente.apellidos}]]</td>
                <td>[[${cliente.correo}]]</td>
                <td>[[${cliente.telefono}]]</td>
-               <td><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">Modificar</td>
-               <td><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">Eliminar</td>
-               
            </tr>
         </table>
     </div>
@@ -42,6 +62,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
      <h2>No hay clientes que mostrar</h2>
      
      </div>
-        <footer th:replace="layout/plantilla :: footer"/>
+     <footer th:replace="layout/plantilla :: footer"/>
+
     </body>
 </html>
