--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -12,11 +12,26 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         
-        <header th:fragment="header">
-            <h1>TechShop</h1>
+        <header th:fragment="header" class="header">
+            <nav class="nav">
+                 <a th:href="@{/}" class="logo nav-link">TechShop</a>
+                 <ul class="nav-menu">
+                     <li class="nav-menu-item">
+                         <a th:href="@{/cliente/listado}" class="nav-menu-link">Clientes</a>
+                     </li>
+                     <li class="nav-menu-item">
+                         <a th:href="@{/articulo/listado}" class="nav-menu-link">Articulos</a>
+                     </li>
+                     <li class="nav-menu-item">
+                         <a th:href="@{/categoria/listado}" class="nav-menu-link">Categorias</a>
+                     </li>
+                     
+                 </ul>
+                
+            </nav>
         </header>
         
-        <footer th:fragment="footer">
+        <footer th:fragment="footer" class="footer">
             <p>&COPY; Derechos Reservados 2022</p>
         </footer>
         
