--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
         <meta charset="UTF-8">
         <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
@@ -13,18 +13,20 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-        <h2>Nuestros articulos</h2>
+        <h2>[[#{index.titulo}]]</h2>
         <div th:if="${articulos !=null and !articulos.empty}">
         <table border="1">
             <tr>
-                <th>Descripcion</th>
-                <th>Precio</th>
+                <th>[[#{articulo.descripcion}]]</th>
+                <th>[[#{aritculo.precio}]]</th>
+                <th>[[#{aritculo.comprar}]]</th>
+
            </tr>
            
            <tr th:each="articulos : ${articulos}">
                <td>[[${articulo.descripcion}]]</td>
                <td>style="text-align: right">[[${#numbers.formatDecimal(articulo.precio,3,2)}]]</td>
-               <td><a th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">Agregar</td>
+               <td><a th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">[[#{accion.agregar}]]</td>
                
            </tr>
         </table>
@@ -32,7 +34,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         
      <div th:if="${clientes ==null or clientes.empty}">
          
-     <h2>No hay articulos que mostrar</h2>
+     <h2>[[#{aritculo.no_mostrar}]]</h2>
      
      </div>
         <footer th:replace="layout/plantilla :: footer"/>
