--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -5,7 +5,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 -->
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
         <meta charset="UTF-8">
       <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
@@ -13,18 +13,18 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <dv class="contenido">
-        <h2>Informacion del clientes</h2>
-        <a th:href="@{/cliente/nuevo}">Nuevo cliente</a>
+        <h2>[[#{cliente.titulo}]]</h2>
+        <a th:href="@{/cliente/nuevo}">[[#{cliente.nuevo}]]</a>
         <div th:if="${clientes !=null and !clientes.empty}">
         <table border="1">
             <tr>
-                <th>Nombre</th>
-                <th>Apellidos</th>
-                <th>Correo</th>
-                <th>Telefono</th>
-                <th>Credito</th>
-                <th>Eliminar</th>
-                <th>Modificar</th>
+                <th>[[#{cliente.nombre}]]</th>
+                <th>[[#{cliente.apellidos}]]</th>
+                <th>[[#{cliente.correo}]]</th>
+                <th>[[#{cliente.telefono}]]</th>
+                <th>[[#{cliente.limite}]]</th>
+                <th>[[#{accion.eliminar}]]</th>
+                <th>[[#{accion.actualizar}]]</th>
            </tr>
            
            <tr th:each="cliente : ${clientes}">
@@ -33,8 +33,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                <td>[[${cliente.correo}]]</td>
                <td>[[${cliente.telefono}]]</td>
                <td style="text-align: right">[[${#numbers.formatDecimal(cliente.credito.limite,3,2)}]]</td>
-               <td><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">Modificar</a></td>
-               <td><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">Eliminar</a></td>
+               <td><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">[[#{accion.actualizar}]]</a></td>
+               <td><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">[[#{accion.eliminar}]]</a></td>
                
            </tr>
         </table>
@@ -42,7 +42,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         
      <div th:if="${clientes ==null or clientes.empty}">
          
-     <h2>No hay clientes que mostrar</h2>
+     <h2>[[#{aritculo.no_mostrar}]]</h2>
         </div>
      </div>
         <footer th:replace="layout/plantilla :: footer"/>
