--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -4,17 +4,18 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to c
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
 -->
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns="http://www.w3.org/1999/xhtml">
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://thymeleaf.org/extras/spring-security">
     <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
         <meta charset="UTF-8">
-      <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <dv class="contenido">
         <h2>[[#{cliente.titulo}]]</h2>
-        <a th:href="@{/cliente/nuevo}">[[#{cliente.nuevo}]]</a>
+        <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/cliente/nuevo}">[[#{cliente.nuevo}]]</a>
         <div th:if="${clientes !=null and !clientes.empty}">
         <table border="1">
             <tr>
@@ -23,8 +24,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <th>[[#{cliente.correo}]]</th>
                 <th>[[#{cliente.telefono}]]</th>
                 <th>[[#{cliente.limite}]]</th>
-                <th>[[#{accion.eliminar}]]</th>
-                <th>[[#{accion.actualizar}]]</th>
+                <th sec:authorize="hasRole('ROLE_ADMIN')">[[#{accion.eliminar}]]</th>
+                <th sec:authorize="hasRole('ROLE_ADMIN')">[[#{accion.actualizar}]]</th>
            </tr>
            
            <tr th:each="cliente : ${clientes}">
@@ -33,8 +34,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                <td>[[${cliente.correo}]]</td>
                <td>[[${cliente.telefono}]]</td>
                <td style="text-align: right">[[${#numbers.formatDecimal(cliente.credito.limite,3,2)}]]</td>
-               <td><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">[[#{accion.actualizar}]]</a></td>
-               <td><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">[[#{accion.eliminar}]]</a></td>
+               <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">[[#{accion.actualizar}]]</a></td>
+               <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">[[#{accion.eliminar}]]</a></td>
                
            </tr>
         </table>
