--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,36 +7,27 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
       xmlns="http://www.w3.org/1999/xhtml">
     <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <div class="contenido">
-        <h2>[[#{index.titulo}]]</h2>
-        <div th:if="${articulos !=null and !articulos.empty}">
-        <table border="1">
-            <tr>
-                <th>[[#{articulo.descripcion}]]</th>
-                <th>[[#{aritculo.precio}]]</th>
-                <th>[[#{aritculo.comprar}]]</th>
+        <div class="container">
+            <h2>[[#{index.titulo}]]</h2>
+            <div class="row row-cols-3" th:if="${articulos !=null and !articulos.empty}">
+                <div class="card" th:each="articulo : ${articulos}">
 
-           </tr>
-           
-           <tr th:each="articulos : ${articulos}">
-               <td>[[${articulo.descripcion}]]</td>
-               <td>style="text-align: right">[[${#numbers.formatDecimal(articulo.precio,3,2)}]]</td>
-               <td><a th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">[[#{accion.agregar}]]</td>
-               
-           </tr>
-        </table>
-    </div>
-        
-     <div th:if="${clientes ==null or clientes.empty}">
-         
-     <h2>[[#{aritculo.no_mostrar}]]</h2>
-     
-     </div>
-        <footer th:replace="layout/plantilla :: footer"/>
+                    <div class="card-body">
+                        <h5 class="card-title">[[${articulo.descripcion}]]</h5>
+                        <h6 class="card-subtitle mb-2 text-muted text-end">[[${#numbers.formatDecimal(articulo.precio,3,2)}]]</h6>
+                        <a class="card-link" th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">[[#{accion.agregar}]]</a>
+                        <p class="card-text">[[${articulo.detalle}]]</p>
+                    </div>          
+                </div>
+            </div>
+            <div th:if="${articulos ==null or articulos.empty}">
+
+                <h2>[[#{aritculo.no_mostrar}]]</h2>
+
+            </div>
+            <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
