--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -9,11 +9,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head th:fragment="head">
         <title>TechShop</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" th:href="@{webjars/bootstrap/css/bootstrap.min.css}"/>
-        <link rel="stylesheet" th:href="@{webjars/font-awesome/css/all.css}"/>
-        <script th:src="@{webjars/jquery/jquery.min.js}"></script>
-        <script th:src="@{webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{webjars/bootstrap/js/bootstrap.min.js}"></script>
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
     <body>
         
@@ -25,7 +25,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                      <span class="navbar-toggler-icon"></span>
                  </button>
                  <div class="collapse navbar-collapse" id="navbarCollapse">
-                 <ul class="navbar-nav">
+                 <ul class="navbar-nav" sec:authorize = "hasRole('ROLE_VENDEDOR')">
                      <li class="nav-item px-2">
                          <a th:href="@{/cliente/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.clientes}">Clientes</a>
                      </li>
@@ -35,15 +35,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                      <li class="nav-item px-2">
                          <a th:href="@{/categoria/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.categorias}">Categorias</a>
                      </li>
-                     <li class="nav-item px-2">
+                     <li class="nav-item px-2" sec:authorize="hasRole('ROLE_ADMIN')">
                          <a th:href="@{/usuario/listado}" class="nav-menu-link nav-link" th:text="#{plantilla.usuarios}">Usuarios</a>
                      </li>
-                     
-                     
-                     
+
                  </ul>
                 
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav ml-auto" sec:authorize="isAuthenticated()">
                     <li class="nav-item mr-3">
                         <a href="#"
                            class="nav-link">
@@ -67,12 +65,32 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                      </div>  
                 </div>  
             </nav>
+            <section id="main-header" class="py-2 bg-success text-white">
+                <div class="container">
+                  <div class="row">
+                      <div class="col-md-6">
+                          <h1>
+                              <i class="fas fa-cog"></i> [[#{plantilla.titulo}]]
+                              </h1>
+                      </div>
+                   </div>    
+               </div>
+                      
+                      
+                      
         </header>
         
-        <footer th:fragment="footer" class="footer">
-            <p>&COPY; [[#{plantilla.derechos}]]</p>
+        <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
+            <div class="container">
+                <div class="col">
+          
+            <p class="lead" text-center >&COPY; [[#{plantilla.derechos}]] |
             <a th:href="@{/(lang=es)}">ES</a> |
-            <a th:href="@{/(lang=es)}">EN</a> |
+            <a th:href="@{/(lang=es)}">EN</a> 
+            
+                </p>
+              </div>
+           </div>
         </footer>
         
     </body>
