--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -9,43 +9,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
         <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <dv class="contenido">
-        <h2>[[#{cliente.titulo}]]</h2>
-        <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/cliente/nuevo}">[[#{cliente.nuevo}]]</a>
-        <div th:if="${clientes !=null and !clientes.empty}">
-        <table border="1">
-            <tr>
-                <th>[[#{cliente.nombre}]]</th>
-                <th>[[#{cliente.apellidos}]]</th>
-                <th>[[#{cliente.correo}]]</th>
-                <th>[[#{cliente.telefono}]]</th>
-                <th>[[#{cliente.limite}]]</th>
-                <th sec:authorize="hasRole('ROLE_ADMIN')">[[#{accion.eliminar}]]</th>
-                <th sec:authorize="hasRole('ROLE_ADMIN')">[[#{accion.actualizar}]]</th>
-           </tr>
-           
-           <tr th:each="cliente : ${clientes}">
-               <td>[[${cliente.nombre}]]</td>
-               <td>[[${cliente.apellidos}]]</td>
-               <td>[[${cliente.correo}]]</td>
-               <td>[[${cliente.telefono}]]</td>
-               <td style="text-align: right">[[${#numbers.formatDecimal(cliente.credito.limite,3,2)}]]</td>
-               <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/cliente/modificar/}+${cliente.idCliente}">[[#{accion.actualizar}]]</a></td>
-               <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{/cliente/eliminar/}+${cliente.idCliente}">[[#{accion.eliminar}]]</a></td>
-               
-           </tr>
-        </table>
-    </div>
-        
-     <div th:if="${clientes ==null or clientes.empty}">
-         
-     <h2>[[#{aritculo.no_mostrar}]]</h2>
-        </div>
-     </div>
+
+
+        <section th:replace="cliente/fragmentosCliente :: botonesAgregar"/>
+        <section th:replace="cliente/fragmentosCliente :: agregarCliente"/>
+        <section th:replace="cliente/fragmentosCliente :: listadoClientes"/>
+
+
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
