--- a/src/main/resources/templates/cliente/modificar.html
+++ b/src/main/resources/templates/cliente/modificar.html
@@ -8,69 +8,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
         <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <dv class="contenido">
-        <h2>[[#{cliente.datos}]]</h2>
-        <a th:href="@{/cliente/listado}">[[#{accion.regresar}]]</a>
-        <hr/>
-        <form th:action="@{/cliente/guardar}"
-              method="post"
-              th:object="${cliente}">
-            
-            <input type="hidden" name="idCliente" th:field="*{idCliente}"/>
-                
-            <input type="hidden" name="idCredito" th:field="*{credito.idCredito}"/>
-                
-            <fieldset>
-                <label for="nombre">[[#{cliente.nombre}]]</label>
-                <input type="text" name="nombre" th:field="*{nombre}"/>
-            </fieldset>    
-            <fieldset>
-                <label for="apellidos">[[#{cliente.apellido}]]</label>
-                <input type="text" name="apellidos" th:field="*{apellidos}"/>
-            </fieldset>
-            <fieldset>
-                <label for="correo">[[#{cliente.correo}]]</label>
-                <input type="email" name="correo" th:field="*{correo}"/>
-            </fieldset>    
-            <fieldset>
-                <label for="telefono">[[#{cliente.telefono}]]</label>
-                <input type="tel" name="telefono" th:field="*{telefono}"/>
-            </fieldset>
-             <fieldset>
-                <label for="limite">[[#{cliente.limite}]]</label>
-                <input type="number" name="limite" th:field="*{credito.limite}"/>
-            </fieldset>  
-            <hr/>
-            <button type="submit" th:text="#{accion.guardar}"/>
-        </form>
-        <div th:if="${clientes !=null and !clientes.empty}">
-        <table border="1">
-            <tr>
-                <th>Nombre</th>
-                <th>Apellidos</th>
-                <th>Correo</th>
-                <th>Telefono</th>
-           </tr>
-           
-           <tr th:each="cliente : ${clientes}">
-               <td>[[${cliente.nombre}]]</td>
-               <td>[[${cliente.apellidos}]]</td>
-               <td>[[${cliente.correo}]]</td>
-               <td>[[${cliente.telefono}]]</td>
-           </tr>
-        </table>
-    </div>
-        
-     <div th:if="${clientes ==null or clientes.empty}">
-         
-     <h2>No hay clientes que mostrar</h2>
-        </div>
-     </div>
-             <footer th:replace="layout/plantilla :: footer"/>
+        <section th:replace="cliente/fragmentosCliente :: editarCliente"/> 
+        <footer th:replace="layout/plantilla :: footer"/>
 
     </body>
 </html>
